<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Beat.BeatActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-38dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beat"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/beat_indicator"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:text="@string/beat_image"
        android:background="@drawable/circle_background"
        android:textColor="@color/strong_beat"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <!-- 节拍模式选择 -->

    <!-- BPM调节 -->

    <TextView
        android:id="@+id/pattern_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4/4 拍"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/beat_indicator"
        app:layout_constraintStart_toStartOf="@+id/beat_indicator"
        app:layout_constraintTop_toBottomOf="@+id/beat_indicator" />

    <Spinner
        android:id="@+id/pattern_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red_dark"
        app:layout_constraintBottom_toTopOf="@+id/bpm_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <!-- 开始/停止按钮 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_stop_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@null"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpm_seekbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="240"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpm_seekbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpm_seekbar" />

    <TextView
        android:id="@+id/bpm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="120 BPM"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/bpm_seekbar"
        app:layout_constraintStart_toStartOf="@+id/bpm_seekbar" />

    <SeekBar
        android:id="@+id/bpm_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="240"
        android:progress="120"
        android:progressTint="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>